cv updated with photo

--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,17 @@
 		#email{
 			margin-top: 0;
 		}
+		#img{
+			width:150px;
+			align-self: right;
+			float: right;
+		}
+		#place{
+			float:left;
+		}
+		#sign{
+			float:right;
+		}
 	
 		.heading{
 			font-size: 150%;
@@ -22,6 +33,7 @@
 			text-decoration: underline;
 			margin-bottom: 2;
 		}
+
 		table{
 			border-collapse: collapse;
 			width: 80%;
@@ -36,11 +48,13 @@
 	</style>
 </head>
 <body>
+	<img id = 'img' src='/home/mindfire/resume_html/img.JPG' />
 	<center>
 	<b id = 'name'> DeeptiRanjan Baliarsingh</b>
 	<p id = 'address'> At/po- Kulei, Ps- Banpur, Dist- khordha, Pin-752034</p>	
 	<p id = 'email'>7809524480<b>||</b>deeptiranjan3.drb@gmail.com</p>
 	</center>
+	
 
 	<div id = 'objective'> 
 		<b class = 'heading'>OBJECTIVE</b>
@@ -123,8 +137,8 @@
 
 	<footer>
 		<p><b>Date:</b> 13.01.2020</p>
-		<p><b>Place:</b>Bhubaneswar</p>
-		<p><b>Signeture: </b>Deeptiranjan Baliarsingh</p>
+		<p id = 'place'><b>Place:</b>Bhubaneswar</p>
+		<p id = 'sign'><b>Signature: </b>Deeptiranjan Baliarsingh</p>
 	</footer>
 
 </body>
