--- a/resume.html
+++ b/resume.html
@@ -2,57 +2,14 @@
 <html>
 <head>
 	<title>CV OF DEEPTIRANJAN</title>
-	<style>
-		#name{
-			margin-bottom: 0;
-			font-size: 150%;
-			font-style: "Lucida Console";
-		}
-		#address{
-			margin-top : 0;
-			margin-bottom: 0;
-		}
-		#email{
-			margin-top: 0;
-		}
-		#img{
-			width:150px;
-			align-self: right;
-			float: right;
-		}
-		#place{
-			float:left;
-		}
-		#sign{
-			float:right;
-		}
-	
-		.heading{
-			font-size: 150%;
-			font-style: "Lucida Console";
-			text-decoration: underline;
-			margin-bottom: 2;
-		}
-
-		table{
-			border-collapse: collapse;
-			width: 80%;
-		}
-		th,td{
-			border-collapse: collapse;
-			border: 2px solid black;
-			text-align: left;
-			height: 30px;
-		}
-		
-	</style>
+	<link rel="stylesheet" type="text/css" href="resume_style.css">
 </head>
 <body>
-	<img id = 'img' src='/home/mindfire/resume_html/img.JPG' />
+	<img id = 'im' src='/home/mindfire/resume_html/img.JPG' />
 	<center>
 	<b id = 'name'> DeeptiRanjan Baliarsingh</b>
 	<p id = 'address'> At/po- Kulei, Ps- Banpur, Dist- khordha, Pin-752034</p>	
-	<p id = 'email'>7809524480<b>||</b>deeptiranjan3.drb@gmail.com</p>
+	<p id = 'email'>7809524480<b>|</b>deeptiranjan3.drb@gmail.com</p>
 	</center>
 	
 
