resume.html edited online with Bitbucket

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="im">
-	<img class="image" src='/home/mindfire/resume_html/img.JPG' / alt="Profile photo">
+	<img class="image" src='img.JPG' / alt="Profile photo">
 	</div>
 	<div id = 'title' >
 	<p id = 'name'> DeeptiRanjan Baliarsingh</p>
