--- a/resume_bootstrap.html
+++ b/resume_bootstrap.html
@@ -1,114 +1,146 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css">
-	<link rel="stylesheet" type="text/css" href="resume_bootstrap_style.css">
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-</head>
-<body>
-	<div class="container-fluid">
-		<div class = "row">
-			<div class = "col-sm-4">
-				<img id = 'im'class="rounded-circle mx-auto d-block" src='/home/mindfire/resume_html/img.JPG' / alt="Profile photo">
-				<div id = 'title' >
-						<h2>
-						 DeeptiRanjan Baliarsingh
-						</h2>
-						<i class="fas fa-at"></i>
-						<span id = 'address'> 
-							At/po- Kulei, Ps- Banpur, Dist- khordha, Pin-752034
-						</span>
-						<br />
-						<i class="fas fa-envelope"></i>	
-						<span id = 'email'>deeptiranjan3.drb@gmail.com
-						</span>
-						<br />
-						<i class="fas fa-phone"></i>
-						<span id = 'phone'>
-							7809524480
-						</span>
+  <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="resume_bootstrap_style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4">
+          <img id = 'im'class="rounded-circle mx-auto d-block"
+          src='/home/mindfire/resume_html/img.JPG' / alt="Profile photo">
+          <div id="title">
+            <p class="name">
+              DeeptiRanjan Baliarsingh
+            </p>
+            <i class="fas fa-at"></i>
+            <span id="address">
+              At/po- Kulei, Ps- Banpur, Dist- khordha, Pin-752034
+            </span>
+            <br />
+            <i class="fas fa-envelope"></i>
+            <a id="email" href="mailto:deeptiranjan3.drb@gmail.com"
+              >deeptiranjan3.drb@gmail.com
+            </a>
+            <br />
+            <i class="fas fa-phone"></i>
+            <span id="phone">
+              7809524480
+            </span>
+          </div>
+          <div id="objective">
+            <p class="heading">OBJECTIVE</p>
+            <p>
+              Seeking a working position that will allow me to explore career
+              options in the ITsector. A self-motivated, hardworking graduate
+              student in computer science, I have undergone various training
+              program and completed some projects relevant to this career.
+            </p>
+          </div>
+          <div id="technical_skills">
+            <p class="heading">TECHNICAL SKILLS</p>
+            <ul>
+              <li>
+                <p>
+                  <span class="bold">Programming Languages:</span> C, Java,
+                  Python
+                </p>
+              </li>
+              <li>
+                <p>
+                  <span class="bold">Operating systems:</span> Linux, Window
+                </p>
+              </li>
+              <li>
+                <p><span class="bold">Databases:</span> MySQL</p>
+              </li>
+            </ul>
+          </div>
+          <div id="hobbies">
+            <p class="heading">HOBBIES</p>
+            <ul>
+              <li><p>Watching movies</p></li>
+              <li><p>Watching Tv Series</p></li>
+              <li><p>Playing Cricket</p></li>
+            </ul>
+          </div>
+        </div>
 
-				</div>
-				<div id = "objective">
-				<h3>OBJECTIVE</h3>
-				<p> 
-					Seeking a working position that will allow me to explore career options in the ITsector. 
-					A self-motivated, hardworking graduate student in computer science, I have undergone various training program and completed some projects relevant to this career.
-				</p>
-				</div>
-				<div id = 'technical_skills' >
-					<h3>TECHNICAL SKILLS</h3>
-					<ul>
-						<li ><p><span class="bold">Programming Languages:</span> C, Java, Python</p> </li>
-						<li><p><span class="bold">Operating systems:</span> Linux, Window</p> </li>
-						<li><p><span class="bold">Databases:</span> MySQL</p></li>
-					</ul>
-				</div>
-				<div id = 'hobbies'>
-					<h3 class = 'heading'>HOBBIES</h3>
-					<ul>
-						<li><p>Watching movies</p></li>
-						<li><p>Watching Tv Series</p></li>
-						<li><p>Playing Cricket</p></li>
-
-					</ul>
-				</div>
-			</div>
-
-			<div class="col-sm-8 ">
-				<div id = "education" class='container'>
-					<h3>EDUCATIONAL QUALIFICATION</h3>
-					<div class="table-responsive">
-					<table class= "table table-hover table-striped">
-						<thead class="thead-dark">
-							<tr>
-								<th>Examination</th><th>Percentage/CGPA</th><th>Name of institute</th><th>Board/University</th><th>Year of Passing</th>
-							</tr>
-						</thead>
-							<tr>
-								<td>10th standard</td><td>90.2%</td><td>L.D.V.P, Haripur sasan</td><td>BSE</td><td>2013</td>
-							</tr>
-							<tr>
-								<td>12th standard</td><td>86.8%</td><td>Jupiter +2 Science college, BBSR</td><td>CHSE</td><td>2015</td>
-							</tr>
-							<tr>
-								<td>B.TECH</td><td>8.77(Upto 6th sem)</td><td>Silicon Institute of Technology, BBSR</td><td>BPUT</td><td>Pursuing</td>
-							</tr>
-					</table>
-				</div>
-				</div>
-				<div id = 'projects'>
-					<h3 class = 'heading' >PROJECTS</h3>
-					<ul>
-						<li><p class="bold">Image Enhancement using OpenCV</p></li>
-						<p class="bold">Description: </p>
-						<p>Used OpenCV module in Python to perform denoising, exposure correction,
-							boosting and deblurring of a given image </p>
-						<li><p class="bold">Examination portal prototype</p></li>
-						<p class="bold">Description: </p>
-						<p>Designed a examination portal to view both objective and subject questions
-							with answers using jdbc, html & css</p>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class = "row">
-			<div class = "col-sm-4">
-				<p  id = 'date'><span class = 'bold'>Date:</span> 13.01.2020</p>
-				<p 	id = 'place'><span class = 'bold'>Place:</span>	 Bhubaneswar</p>
-			</div>
-			<div class = "col-sm-8">
-				<br />
-				<p id = 'sign'><span class = 'bold'>Signature:</span> Deeptiranjan Baliarsingh</p>
-			</div>
-		</div>
-
-
-	</div>
-		
-		
-
-	
-</body>
+        <div class="col-lg-8 ">
+          <div id="education" class="container-fluid">
+            <p class="heading">EDUCATIONAL QUALIFICATION</p>
+            <table class="table table-hover table-striped table-responsive">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Examination</th>
+                  <th>Percentage/CGPA</th>
+                  <th>Name of institute</th>
+                  <th>Board/University</th>
+                  <th>Year of Passing</th>
+                </tr>
+              </thead>
+              <tr>
+                <td>10th standard</td>
+                <td>90.2%</td>
+                <td>L.D.V.P, Haripur sasan</td>
+                <td>BSE</td>
+                <td>2013</td>
+              </tr>
+              <tr>
+                <td>12th standard</td>
+                <td>86.8%</td>
+                <td>Jupiter +2 Science college, BBSR</td>
+                <td>CHSE</td>
+                <td>2015</td>
+              </tr>
+              <tr>
+                <td>B.TECH</td>
+                <td>8.77(Upto 6th sem)</td>
+                <td>Silicon Institute of Technology, BBSR</td>
+                <td>BPUT</td>
+                <td>Pursuing</td>
+              </tr>
+            </table>
+          </div>
+          <div id="projects">
+            <p class="heading">PROJECTS</p>
+            <ul>
+              <li><p class="bold">Image Enhancement using OpenCV</p></li>
+              <p class="bold">Description:</p>
+              <p>
+                Used OpenCV module in Python to perform denoising, exposure
+                correction, boosting and deblurring of a given image
+              </p>
+              <li><p class="bold">Examination portal prototype</p></li>
+              <p class="bold">Description:</p>
+              <p>
+                Designed a examination portal to view both objective and subject
+                questions with answers using jdbc, html & css
+              </p>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <footer id="signature">
+        <p id="date"><span class="bold">Date:</span> 13.01.2020</p>
+        <p id="place"><span class="bold">Place:</span> Bhubaneswar</p>
+        <p id="sign">
+          <span class="bold">Signature:</span> Deeptiranjan Baliarsingh
+        </p>
+      </footer>
+    </div>
+  </body>
 </html>
