cv structure updated

--- a/resume.html
+++ b/resume.html
@@ -1,97 +1,120 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<meta name = 'author' content = 'Deeptiranjan'>
-	<title>CV OF DEEPTIRANJAN</title>
-	<link rel="stylesheet" type="text/css" href="resume_style.css">
-</head>
-<body>
-	<div class="im">
-	<img class="image" src='img.JPG' / alt="Profile photo">
-	</div>
-	<div id = 'title' >
-	<p id = 'name'> DeeptiRanjan Baliarsingh</p>
-	<p id = 'address'> At/po- Kulei, Ps- Banpur, Dist- khordha, Pin-752034</p>	
-	<p id = 'email'>7809524480<b>|</b>deeptiranjan3.drb@gmail.com</p>
-	</div>
-	
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="author" content="Deeptiranjan" />
+    <title>CV OF DEEPTIRANJAN</title>
+    <link rel="stylesheet" type="text/css" href="resume_style.css" />
+  </head>
+  <body>
+    <div class="im">
+      <img class="image" src='img.JPG' / alt="Profile photo">
+    </div>
+    <div id="title" style="background: blue;>
+      <p id="name">DeeptiRanjan Baliarsingh</p>
+      <p id="address">At/po- Kulei, Ps- Banpur, Dist- khordha, Pin-752034</p>
+      <p id="email">7809524480<b>|</b>deeptiranjan3.drb@gmail.com</p>
+    </div>
 
-	<div id = 'objective'> 
-		<p class = 'heading'>OBJECTIVE</p>
-		<p> 
-			Seeking a working position that will allow me to explore career options in the ITsector. 
-			A self-motivated, hardworking graduate student in computer science, I have undergone various training program and completed some projects relevant to this career.
-		</p>
-	</div>
+    <div id="objective">
+      <p class="heading">OBJECTIVE</p>
+      <p>
+        Seeking a working position that will allow me to explore career options
+        in the ITsector. A self-motivated, hardworking graduate student in
+        computer science, I have undergone various training program and
+        completed some projects relevant to this career.
+      </p>
+    </div>
 
+    <div id="education">
+      <p class="heading">EDUCATIONAL QUALIFICATION</p>
+      <table>
+        <tr>
+          <th>Examination</th>
+          <th>Percentage/CGPA</th>
+          <th>Name of institute</th>
+          <th>Board/University</th>
+          <th>Year of Passing</th>
+        </tr>
+        <tr>
+          <td>10th standard</td>
+          <td>90.2%</td>
+          <td>L.D.V.P, Haripur sasan</td>
+          <td>BSE</td>
+          <td>2013</td>
+        </tr>
+        <tr>
+          <td>12th standard</td>
+          <td>86.8%</td>
+          <td>Jupiter +2 Science college, BBSR</td>
+          <td>CHSE</td>
+          <td>2015</td>
+        </tr>
+        <tr>
+          <td>B.TECH</td>
+          <td>8.77(Upto 6th sem)</td>
+          <td>Silicon Institute of Technology, BBSR</td>
+          <td>BPUT</td>
+          <td>Pursuing</td>
+        </tr>
+      </table>
+    </div>
 
-	<div id = 'education'>
-		<p class = 'heading' >EDUCATIONAL QUALIFICATION</p>
-		<table>
-			<tr>
-				<th>Examination</th><th>Percentage/CGPA</th><th>Name of institute</th><th>Board/University</th><th>Year of Passing</th>
-			</tr>
-			<tr>
-				<td>10th standard</td><td>90.2%</td><td>L.D.V.P, Haripur sasan</td><td>BSE</td><td>2013</td>
-			</tr>
-			<tr>
-				<td>12th standard</td><td>86.8%</td><td>Jupiter +2 Science college, BBSR</td><td>CHSE</td><td>2015</td>
-			</tr>
-			<tr>
-				<td>B.TECH</td><td>8.77(Upto 6th sem)</td><td>Silicon Institute of Technology, BBSR</td><td>BPUT</td><td>Pursuing</td>
-			</tr>
-		</table>
-	</div>
+    <div id="technical skills" style="background: blue;>
+      <p class="heading">TECHNICAL SKILLS</p>
+      <ul>
+        <li>
+          <p class="bold">Programming Languages:</p>
+          <p>C, Java, Python</p>
+        </li>
+        <li>
+          <p class="bold">Operating systems:</p>
+          Linux, Windows
+        </li>
+        <li>
+          <p class="bold">Databases:</p>
+          MySQL
+        </li>
+      </ul>
+    </div>
 
+    <div id="projects">
+      <p class="heading">PROJECTS</p>
+      <ul>
+        <li><p class="bold">Image Enhancement using OpenCV</p></li>
+        <p class="bold">Description:</p>
+        <p>
+          Used OpenCV module in Python to perform denoising, exposure
+          correction, boosting and deblurring of a given image
+        </p>
+        <li><p class="bold">Examination portal prototype</p></li>
+        <p class="bold">Description:</p>
+        <p>
+          Designed a examination portal to view both objective and subject
+          questions with answers using jdbc, html & css
+        </p>
+      </ul>
+    </div>
 
-	<div id = 'technical skills' >
-		<p class = 'heading'>TECHNICAL SKILLS</p>
-		<ul>
-			<li ><p class="bold">Programming Languages:</p> <p>C, Java, Python</p> </li>
-			<li><p class="bold">Operating systems:</p> Linux, Windows </li>
-			<li><p class="bold">Databases:</p> MySQL</li>
-		</ul>
-	</div>
+    <div id="hobbies">
+      <p class="heading">HOBBIES</p>
+      <ul>
+        <li>Watching movies</li>
+        <br />
+        <li>Watching Tv Series</li>
+        <br />
+        <li>Playing Cricket</li>
+        <br />
+      </ul>
+    </div>
 
-
-	<div id = 'projects'>
-		<p class = 'heading' >PROJECTS</p>
-		<ul>
-			<li><p class="bold">Image Enhancement using OpenCV</p></li>
-			<p class="bold">Description: </p>
-			<p>Used OpenCV module in Python to perform denoising, exposure correction,
-				boosting and deblurring of a given image </p>
-			<li><p class="bold">Examination portal prototype</p></li>
-			<p class="bold">Description: </p>
-			<p>Designed a examination portal to view both objective and subject questions
-				with answers using jdbc, html & css</p>
-		</ul>
-	</div>
-
-	<div id = 'hobbies'>
-		<p class = 'heading'>HOBBIES</p>
-		<ul>
-			<li>Watching movies</li>
-			<br />
-			<li>Watching Tv Series</li>
-			<br />
-			<li>Playing Cricket</li>
-			<br />
-
-		</ul>
-	</div>
-
-	<footer>
-		<div id = 'left'>
-		<p  id = 'date' class = 'bold'>Date: 13.01.2020</p>
-		<p 	id = 'place' class = 'bold'>Place: Bhubaneswar</p>
-		</div>
-		<div id = 'right'>
-		<p id = 'sign' class = 'bold'>Signature: Deeptiranjan Baliarsingh</p>
-		</div>
-	</footer>
-
-</body>
+    <footer id="signature">
+      <p id="date"><span class="bold">Date:</span> 13.01.2020</p>
+      <p id="place"><span class="bold">Place:</span> Bhubaneswar</p>
+      <p id="sign">
+        <span class="bold">Signature:</span> Deeptiranjan Baliarsingh
+      </p>
+    </footer>
+  </body>
 </html>
