fixed profile image not displaying issue

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-lg-4">
           <img id = 'im'class="rounded-circle mx-auto d-block"
-          src='/img.JPG' / alt="Profile photo">
+          src='img.JPG' / alt="Profile photo">
           <div id="title">
             <p class="name">
               DeeptiRanjan Baliarsingh
